[package]
name = "weather"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
reqwest = { version = "0.12.24", features = ["json"] }
axum = { version = "0.8.4", features = ["macros"] }
rmcp = { version = "0.1.5", features = ["server", "transport-io"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.43"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
